# DNA_Linker_prediction

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
DNA_Linker_prediction/: 1_Linkers_connectivity.ipynb  BackUp_Linker_connectivity.ipynb  Clean_Run_dropParticles_pipeline.ipynb  Concatenate_lists_linkers.ipynb  Run_Full_pipeline_all_motls.ipynb  Run_dropParticles_pipeline.ipynb  Run_noise.ipynb  Run_noise_pipeline.ipynb  Untitled.ipynb  Untitled1.ipynb  angle_noise_sweep_metrics.csv  angle_noise_sweep_metrics.pkl  motl_EMD2601_pos10_ang0.em  noise_sweep_metrics.csv  noise_sweep_metrics.npz  noise_sweep_metrics.pkl  pyproject.toml  untitled.py
DNA_Linker_prediction/Analysis_connected/: .distances_i-i+1.csv  .distances_i-i+2.csv
DNA_Linker_prediction/Out_removal_particles/: false_negative_sampled_removing_1_particles.csv  false_negative_sampled_removing_2_particles.csv  false_negative_sampled_removing_3_particles.csv  false_negative_sampled_removing_4_particles.csv  false_negative_sampled_removing_5_particles.csv
DNA_Linker_prediction/dna_linker/: dna_linkers.py  main_dna_linkers.py  run_multiprocess.py
DNA_Linker_prediction/inputs/: DNA_bin1_1.971voxel_52bp_molmap_3.5_inv.mrc  TEST.em  motl_EMD13356_STA_tmpl.em  motl_EMD13363_STA_tmpl.em  motl_EMD13370_STA_tmpl.em  motl_EMD13379_STA_tmpl.em  motl_EMD2601_canon.em  motl_EMD38407_STA_tmpl.em
DNA_Linker_prediction/inputs_dropped/: motl_EMD2601_dropped_sid0.em  motl_EMD2601_dropped_sid0_1.em  motl_EMD2601_dropped_sid0_10.em  motl_EMD2601_dropped_sid0_10_11.em  motl_EMD2601_dropped_sid0_11.em  motl_EMD2601_dropped_sid0_1_10.em  motl_EMD2601_dropped_sid0_1_11.em  motl_EMD2601_dropped_sid0_1_2.em  motl_EMD2601_dropped_sid0_1_2_10.em  motl_EMD2601_dropped_sid0_1_2_3.em  motl_EMD2601_dropped_sid0_1_2_4_6.em  motl_EMD2601_dropped_sid0_1_2_5_11.em  motl_EMD2601_dropped_sid0_1_2_7_11.em  motl_EMD2601_dropped_sid0_1_2_7_9.em  motl_EMD2601_dropped_sid0_1_2_9_11.em  motl_EMD2601_dropped_sid0_1_3.em  motl_EMD2601_dropped_sid0_1_3_10.em  motl_EMD2601_dropped_sid0_1_3_5_10.em  motl_EMD2601_dropped_sid0_1_3_6.em  (+532 more)
(+7222 files in other folders)
